# hilbert.artifactsMMO

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  clean.sh  compile_flags.txt
.github/workflows/: build.yaml
src/: logger.cpp  logger.h  main.cpp  player.h  util.cpp  util.h
